Add JVM args to start.sh scripts
Signed-off-by: Petr Weinfurt <petr.weinfurt@broadcom.com>